# attention-hlslib

./: .gitignore  CMakeLists.txt  README.md  attention.hpp  bind_storage.hpp  limits.hpp  mac_info.hpp  matmul.hpp  softmax.hpp  stream_tiler.hpp  swizzle.hpp
tb/: .gitignore  attention_config.hpp  attention_tb.cpp  attention_top.cpp  attention_top.hpp  test_attention.tcl
tests/: CMakeLists.txt  matrix.hpp  test_attention.cpp  test_flatten.cpp  test_matmul.cpp  test_softmax.cpp  test_stream_tiler.cpp  test_swizzle.cpp  tests_main.cpp  utils.hpp
